2008-01-08  Richard Jones  <rjones@redhat.com>

	Type Vc_domain_ops.dops_callback_fn for clarity.
	* virt-ctrl/vc_domain_ops.mli, virt-ctrl/vc_domain_ops.ml,
	  virt-ctrl/vc_mainwindow.mli: Give a type name to the domain_ops
	  callback type, for extra clarity.

	Change comments virt-manager -> virt-ctrl.
	* virt-ctrl/*.ml, virt-ctrl/*.mli: Change comments virt-manager ->
	  virt-ctrl.

	Move programming information to libvirt generated doc.
	* README, libvirt/libvirt.mli: Moved programming information to
	  libvirt generated documentation, greatly expanded examples and
	  other issues.
	* examples/Makefile.in, examples/node_info.ml, examples/.depend:
	  Added node_info example program.
	* .hgignore, Makefile.in: Ignore, clean up node_info binary.
	* examples/list_domains.ml: Make a read-only connection.

	Clean up *.exe files.
	* Makefile.in: Clean up *.exe files.

	Version 0.4.0.1 released.
	* Makefile.in: Provide a 'winupload' target.

	Rename some dialogs in virt-ctrl.
	* virt-ctrl/vc_mainwindow.ml: Fix some "virtual machine manager" ->
	  "virt-ctrl" dialogs in main window.

	Fix bad paths in wininstaller.nsis.in.
	* wininstaller.nsis.in: 
	* .hgignore: Ignore *.orig files.

	Fix native virt-ctrl on Windows.
	* virt-ctrl/Makefile.in, virt-ctrl/mingw-gcc-wrapper.ml: Wrapper
	  around 'gcc' to fix native virt-ctrl builds on Windows/MinGW.
	* .hgignore: Ignore *.exe files.

2008-01-07  Richard Jones  <rjones@redhat.com>

	Updated MANIFEST.
	* MANIFEST: Bring the MANIFEST file up to date.

	mlvirtmanager renamed as virt-ctrl.
	* .hgignore, Makefile.in, configure.ac: Rename
	  mlvirtmanager as virt-ctrl to avoid any confusion with
	  the real virt-manager.
	* mlvirtmanager/, virt-ctrl/: Subdirectory moved.
	* README: Supporting documentation updated.

	Include mlvirtmanager in the Windows installer.
	* wininstaller.nsis.in: Include mlvirtmanager in the Windows
	  installer.
	* Makefile.in: Re-enable native code builds for Windows installer.